notes added to manuscript; tried a map of difference in frequency between the two datasets but that still needs work

--- a/R/data_explore_pt1.Rmd
+++ b/R/data_explore_pt1.Rmd
@@ -111,7 +111,7 @@ spp_map <- plot_rangemap(spp)
 
 print(spp_map)
 ggsave(plot = spp_map,
-       filename = file.path(dir_fig, sprintf('rangemap_%s.png', spp)),
+       filename = file.path(dir_fig, sprintf('rangemap_%s.png', str_replace(tolower(spp), ' ', '_'))),
        width = 8, height = 4, dpi = 200)
 ```
 
