--- a/R/data_explore_pt2.Rmd
+++ b/R/data_explore_pt2.Rmd
@@ -37,7 +37,7 @@ ggsave(file.path(dir_fig, 'AreavsPercOverlap.png'), width = 6, height = 4)
 spp_list <- spp_list %>%
   mutate(lg_area = ifelse(am_area > iucn_area, am_area, iucn_area),
          sm_area = ifelse(am_area < iucn_area, am_area, iucn_area),
-         lg_area_pct = 100 * lg_area / max(iucn_area, am_area, na.rm = TRUE)) ### use largest data set as approx for total ocean range
+         lg_area_pct = 100 * lg_area / max(total_area, na.rm = TRUE)) ### use largest data set as approx for total ocean range
 
 scatter_lg_area_vs_overlap <- ggplot(spp_list, aes(lg_area_pct, sm_perc, color = sm_range)) + 
   ggtheme_plot + 
